--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@eslint/js": "^9.23.0",
     "@typescript-eslint/parser": "^8.5.0",
     "eslint": "^9.23.0",
-    "typescript-eslint": "^8.28.0",
-    "typescript": "^5.8.2"
+    "stylelint": "^16.17.0",
+    "stylelint-config-standard": "^37.0.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.28.0"
   }
 }
