--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@eslint/js": "^9.23.0",
     "@typescript-eslint/parser": "^8.5.0",
     "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "prettier": "^3.5.3",
     "stylelint": "^16.17.0",
     "stylelint-config-standard": "^37.0.0",
     "typescript": "^5.8.2",
